@@ -5,6 +5,7 @@ Revision history for CGI-Info
 	Mark techiaith.cymru as a robot
 	Facebook FBCLID can have "--" which can cause false positives
 	Mark ChatGPT as a search engine
+	Added root_dir() as synonym to rootdir() - that's the naming that CHI uses
 
 0.78	Fri Oct  6 13:59:51 EDT 2023
 	Set HTTP status to 403 on HTTP_USER_AGENT SQL injection attack
